--- a/pages/map.html
+++ b/pages/map.html
@@ -24,7 +24,7 @@
         tomtom.setProductInfo('JAAM', '4.29.0');
         // Creating map
         var map = tomtom.L.map('map', {
-            key: '___',
+            key: "H897MbupgR1ORMradXr9YYNsdw9ajA7X",
             source: 'raster',
             basePath: '../sdk'
         });
