--- a/pages/list.html
+++ b/pages/list.html
@@ -4,6 +4,7 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<link rel='stylesheet' type='text/css' href='../styles/master.css'/>
 	<title>Login</title>
 </head>
 
@@ -11,4 +12,5 @@
 	LIST VIEW PAGE
 </body>
 
+<script></script>
 </html>
