--- a/pages/login.html
+++ b/pages/login.html
@@ -4,11 +4,38 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<link rel='stylesheet' type='text/css' href='../styles/master.css'/>
 	<title>Login</title>
 </head>
 
 <body>
-	LOGIN PAGE
+	<h2>Ay Caramba</h2>
+	<p>
+		Lorem ipsum dolor sit amet, consectetur adipiscing elit,
+		sed do eiusmod tempor incididunt ut labore et dolore magna
+		aliqua. Ut enim ad minim veniam, quis nostrud exercitation
+		ullamco laboris nisi ut aliquip ex ea commodo consequat.
+	</p>
+	<br>
+	<h3>Login</h3>
+	<form class="form" id="loginform">
+		<div class="username">
+			<input type="text" class="" id="username" name="username" required>
+			<label class="label" for="username-input">Username</label>
+		</div>
+		<div class="password">
+			<input type="password" class="" id="password" name="password" required minlength="8">
+			<label class="label" for="password-input">Password</label>
+		</div>
+		<div class="button-container">
+			<button type="button" class="cancel">
+				Cancel
+			</button>
+			<button  type="button" class="submit">
+				Submit
+			</button>
+		</div>
+	</form>
 </body>
 
 </html>
