beginning of styling and finishing placement of elements in HTML pages

--- a/pages/home.html
+++ b/pages/home.html
@@ -20,16 +20,20 @@
 	<br>
 
 	<div class="button-container">
-		<button type="button" class="submit">
-			Report Issue
-		</button>
+		<a href="new-issue.html">
+			<button type="button" class="submit">
+				Report Issue
+			</button>
+		</a>
 	</div>
 
 	<h3>View Issues In Your Area Now:</h3>
 
-	<div href="map.html">
+	<a href="map.html">
+	<div>
 		Map goes here
 	</div>
+</a>
 
 </body>
 
