--- a/pages/login.html
+++ b/pages/login.html
@@ -20,12 +20,12 @@
 	<h3>Login</h3>
 	<form class="form" id="loginform">
 		<div class="username">
-			<input type="text" class="" id="username" name="username" required>
-			<label class="label" for="username-input">Username</label>
+			<input type="text" class="text-field" id="username" placeholder="Username" name="username" required>
+			<!-- <label class="label" for="username-input">Username</label> -->
 		</div>
 		<div class="password">
-			<input type="password" class="" id="password" name="password" required minlength="8">
-			<label class="label" for="password-input">Password</label>
+			<input type="password" class="text-field" id="password" placeholder="Password" name="password" required minlength="8">
+			<!-- <label class="label" for="password-input">Password</label> -->
 		</div>
 		<div class="button-container">
 			<button type="button" class="cancel">
