--- a/pages/map.html
+++ b/pages/map.html
@@ -22,6 +22,7 @@
     <script>
         // Define your product name and version
         tomtom.setProductInfo('JAAM', '4.29.0');
+        console.log(tomtom);
         // Creating map
         var map = tomtom.L.map('map', {
             key: "H897MbupgR1ORMradXr9YYNsdw9ajA7X",
