--- a/pages/home.html
+++ b/pages/home.html
@@ -9,8 +9,8 @@
 </head>
 
 <body>
-	<h1>The App Home</h1>
-	<p>
+	<h1>Ay Caramba</h1>
+	<p class="text-graph">
 		Sed ut perspiciatis unde omnis iste natus error sit
 		voluptatem accusantium doloremque laudantium, totam
 		rem aperiam, eaque ipsa quae ab illo inventore
